// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ActionsList /> renders ActionsList for Receipts without transactionHash 1`] = `
<ActionList
  actions={
    Array [
      Object {
        "args": Object {
          "deposit": "8403180157952936387200",
        },
        "kind": "Transfer",
      },
    ]
  }
  blockTimestamp={1621931941926}
  detailsLink={
    <ReceiptLink
      receiptId="D6a85wNQ47v3dPy8bGF2WQpKQu5di2dnx4EMohm9f5fc"
      transactionHash={null}
    />
  }
  receiverId="ig27.near"
  showDetails={true}
  signerId="system"
/>
`;

exports[`<ActionsList /> renders compact for Receipts 1`] = `
<div
  className="action-compact-row mx-0  row no-gutters"
>
  <div
    className="col-auto"
  >
    <div
      className="jsx-1246332424 action-row-img"
    >
      <svg
        viewBox="0 0 18 18"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="m0 9 6 6L9 0zm12-6L9 18l9-9z"
          fill="#ccc"
        />
      </svg>
    </div>
  </div>
  <div
    className="action-row-details col"
  >
    <div
      className="action-row-message row no-gutters"
    >
      <div
        className="col-md-8 col-7"
      >
        <div
          className="row no-gutters"
        >
          <div
            className="action-row-title col"
          >
            Called method: 'submit_approved_solution' in contract: 
            <span
              onClick={[Function]}
            >
              <a
                className="jsx-3150401870 account-link"
                href="/accounts/app.nearcrowd.near"
                onClick={[Function]}
                onMouseEnter={[Function]}
              >
                app.nearcrowd.near
              </a>
            </span>
          </div>
        </div>
        <div
          className="row no-gutters"
        >
          <div
            className="action-row-text col"
          >
            by
             
            <span
              onClick={[Function]}
            >
              <a
                className="jsx-3150401870 account-link"
                href="/accounts/elonmusk_tesla.near"
                onClick={[Function]}
                onMouseEnter={[Function]}
              >
                elonmusk_tesla.near
              </a>
            </span>
          </div>
        </div>
      </div>
      <div
        className="ml-auto text-right col-md-4 col-5"
      >
        <div
          className="row"
        >
          <div
            className="action-row-txid col"
          >
            <span
              onClick={[Function]}
            >
              <a
                className="jsx-4207953579 receipt-hash-link"
                href="/transactions/2WDYbcuRyyRXJvrXkfFej9Vrv3s3GNTxVQAqKFTiEtGh#7uADRkZL3b8HRbCRe3ML6yRyVZ46HHp1pEJKbxewq5Hg"
                onClick={[Function]}
                onMouseEnter={[Function]}
              >
                7uADRkZ...
              </a>
            </span>
          </div>
        </div>
        <div
          className="row"
        >
          <div
            className="action-row-timer col"
          >
            <span
              className="jsx-1246332424 action-row-timer-status"
            >
              Fetching Status...
              /Checking Finality...
            </span>
             
            <span>
              in 2y
            </span>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<ActionsList /> renders compact for Transaction 1`] = `
Array [
  <div
    className="action-compact-row mx-0  row no-gutters"
  >
    <div
      className="col-auto"
    >
      <div
        className="jsx-1246332424 action-row-img"
      >
        <svg
          viewBox="0 0 18 18"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="m11.26 9-.34-.45a4.5 4.5 0 1 0-3.84 0L6.74 9A7 7 0 0 0 0 16v2h18v-2a7 7 0 0 0-6.74-7z"
            fill="#0071ce"
          />
        </svg>
      </div>
    </div>
    <div
      className="action-row-details col"
    >
      <div
        className="action-row-message row no-gutters"
      >
        <div
          className="col-md-8 col-7"
        >
          <div
            className="row no-gutters"
          >
            <div
              className="action-row-title col"
            >
              New account created: 
              <span
                onClick={[Function]}
              >
                <a
                  className="jsx-3150401870 account-link"
                  href="/accounts/receiver.test"
                  onClick={[Function]}
                  onMouseEnter={[Function]}
                >
                  receiver.test
                </a>
              </span>
            </div>
          </div>
          <div
            className="row no-gutters"
          >
            <div
              className="action-row-text col"
            >
              by
               
              <span
                onClick={[Function]}
              >
                <a
                  className="jsx-3150401870 account-link"
                  href="/accounts/signer.test"
                  onClick={[Function]}
                  onMouseEnter={[Function]}
                >
                  signer.test
                </a>
              </span>
            </div>
          </div>
        </div>
        <div
          className="ml-auto text-right col-md-4 col-5"
        >
          <div
            className="row"
          >
            <div
              className="action-row-txid col"
            >
              <span
                onClick={[Function]}
              >
                <a
                  className="transaction-link"
                  href="/transactions/BvJeW6gnFjkCBKCsRNEBrRLDQCFZNxLAi6uXzmLaVrrj"
                  onClick={[Function]}
                  onMouseEnter={[Function]}
                >
                  BvJeW6g...
                </a>
              </span>
            </div>
          </div>
          <div
            className="row"
          >
            <div
              className="action-row-timer col"
            >
              <span
                className="jsx-1246332424 action-row-timer-status"
              >
                Fetching Status...
                /Checking Finality...
              </span>
               
              <span>
                1s ago
              </span>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>,
  <div
    className="action-compact-row mx-0  row no-gutters"
  >
    <div
      className="col-auto"
    >
      <div
        className="jsx-1246332424 action-row-img"
      >
        <svg
          viewBox="0 0 18 18"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M18 18v-3.6L8.92 5.32A4.5 4.5 0 1 0 4.5 9a4.47 4.47 0 0 0 .82-.08L14.4 18zM3 4.5A1.5 1.5 0 1 1 4.5 6 1.5 1.5 0 0 1 3 4.5z"
            fill="#5ace84"
          />
        </svg>
      </div>
    </div>
    <div
      className="action-row-details col"
    >
      <div
        className="action-row-message row no-gutters"
      >
        <div
          className="col-md-8 col-7"
        >
          <div
            className="row no-gutters"
          >
            <div
              className="action-row-title col"
            >
              New key added for 
              <span
                onClick={[Function]}
              >
                <a
                  className="jsx-3150401870 account-link"
                  href="/accounts/receiver.test"
                  onClick={[Function]}
                  onMouseEnter={[Function]}
                >
                  receiver.test
                </a>
              </span>
              : ed25519:8LXEySy...
              <p>
                with permission FullAccess and nonce 0
              </p>
            </div>
          </div>
          <div
            className="row no-gutters"
          >
            <div
              className="action-row-text col"
            >
              by
               
              <span
                onClick={[Function]}
              >
                <a
                  className="jsx-3150401870 account-link"
                  href="/accounts/signer.test"
                  onClick={[Function]}
                  onMouseEnter={[Function]}
                >
                  signer.test
                </a>
              </span>
            </div>
          </div>
        </div>
        <div
          className="ml-auto text-right col-md-4 col-5"
        >
          <div
            className="row"
          >
            <div
              className="action-row-txid col"
            >
              <span
                onClick={[Function]}
              >
                <a
                  className="transaction-link"
                  href="/transactions/BvJeW6gnFjkCBKCsRNEBrRLDQCFZNxLAi6uXzmLaVrrj"
                  onClick={[Function]}
                  onMouseEnter={[Function]}
                >
                  BvJeW6g...
                </a>
              </span>
            </div>
          </div>
          <div
            className="row"
          >
            <div
              className="action-row-timer col"
            >
              <span
                className="jsx-1246332424 action-row-timer-status"
              >
                Fetching Status...
                /Checking Finality...
              </span>
               
              <span>
                1s ago
              </span>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>,
]
`;

exports[`<ActionsList /> renders functioncall by default 1`] = `
<div
  className="action-sparse-row mx-0  row no-gutters"
>
  <div
    className="col-auto"
  >
    <div
      className="jsx-1246332424 action-row-img"
    >
      <svg
        viewBox="0 0 18 18"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="m0 9 6 6L9 0zm12-6L9 18l9-9z"
          fill="#ccc"
        />
      </svg>
    </div>
  </div>
  <div
    className="action-row-details col"
  >
    <div
      className="action-row-message row no-gutters"
    >
      <div
        className="col-md-8 col-7"
      >
        <div
          className="row no-gutters"
        >
          <div
            className="action-row-title col"
          >
            Called method: 'addMessage' in contract: 
            <span
              onClick={[Function]}
            >
              <a
                className="jsx-3150401870 account-link"
                href="/accounts/receiver2.test"
                onClick={[Function]}
                onMouseEnter={[Function]}
              >
                receiver2.test
              </a>
            </span>
            <dl>
              <dt>
                Arguments:
              </dt>
              <dd>
                <div>
                  <div
                    style={
                      Object {
                        "display": "block",
                        "height": "0px",
                        "overflow": "hidden",
                      }
                    }
                  >
                    <textarea
                      className="jsx-2493677144 code-preview"
                      readOnly={true}
                      value="{
  \\"text\\": \\"when ico?\\"
}"
                    />
                  </div>
                  <div
                    onClick={[Function]}
                  >
                    <div
                      style={
                        Object {
                          "float": "left",
                        }
                      }
                    >
                      Show more
                    </div>
                  </div>
                </div>
              </dd>
            </dl>
          </div>
        </div>
        <div
          className="row no-gutters"
        >
          <div
            className="action-row-text col"
          >
            by
             
            <span
              onClick={[Function]}
            >
              <a
                className="jsx-3150401870 account-link"
                href="/accounts/signer2.test"
                onClick={[Function]}
                onMouseEnter={[Function]}
              >
                signer2.test
              </a>
            </span>
          </div>
        </div>
      </div>
      <div
        className="ml-auto text-right col-md-4 col-5"
      >
        <div
          className="row"
        >
          <div
            className="action-row-txid col"
          >
            <span
              onClick={[Function]}
            >
              <a
                className="transaction-link"
                href="/transactions/222eW6gnFjkCBKCsRNEBrRLDQCFZNxLAi6uXzmLaVrrj"
                onClick={[Function]}
                onMouseEnter={[Function]}
              >
                222eW6g...
              </a>
            </span>
          </div>
        </div>
        <div
          className="row"
        >
          <div
            className="action-row-timer col"
          >
            <span
              className="jsx-1246332424 action-row-timer-status"
            >
              Fetching Status...
              /Checking Finality...
            </span>
             
            <span>
              1s ago
            </span>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<ActionsList /> renders sparsely by default for Receipts 1`] = `
<div
  className="action-sparse-row mx-0  row no-gutters"
>
  <div
    className="col-auto"
  >
    <div
      className="jsx-1246332424 action-row-img"
    >
      <svg
        viewBox="0 0 18 18"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="m0 9 6 6L9 0zm12-6L9 18l9-9z"
          fill="#ccc"
        />
      </svg>
    </div>
  </div>
  <div
    className="action-row-details col"
  >
    <div
      className="action-row-message row no-gutters"
    >
      <div
        className="col-md-8 col-7"
      >
        <div
          className="row no-gutters"
        >
          <div
            className="action-row-title col"
          >
            Called method: 'on_staking_pool_withdraw' in contract: 
            <span
              onClick={[Function]}
            >
              <a
                className="jsx-3150401870 account-link"
                href="/accounts/5ce78003b590264df3f259983f3c3e0917fc10ea.lockup.near"
                onClick={[Function]}
                onMouseEnter={[Function]}
              >
                5ce78…ockup.near
              </a>
            </span>
          </div>
        </div>
        <div
          className="row no-gutters"
        >
          <div
            className="action-row-text col"
          >
            by
             
            <span
              onClick={[Function]}
            >
              <a
                className="jsx-3150401870 account-link"
                href="/accounts/5ce78003b590264df3f259983f3c3e0917fc10ea.lockup.near"
                onClick={[Function]}
                onMouseEnter={[Function]}
              >
                5ce78…ockup.near
              </a>
            </span>
          </div>
        </div>
      </div>
      <div
        className="ml-auto text-right col-md-4 col-5"
      >
        <div
          className="row"
        >
          <div
            className="action-row-txid col"
          >
            <span
              className="jsx-4207953579 receipt-hash-link disabled"
              title="BvG4qfnrxVfpqXrSgxxnfdrHYTKFjTcf2LtgEeX5Mzyz"
            >
              BvG4qfn...
            </span>
          </div>
        </div>
        <div
          className="row"
        >
          <div
            className="action-row-timer col"
          >
            <span
              className="jsx-1246332424 action-row-timer-status"
            >
              Fetching Status...
              /Checking Finality...
            </span>
             
            <span>
              in 2y
            </span>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<ActionsList /> renders sparsely by default for Transactions 1`] = `
Array [
  <div
    className="action-sparse-row mx-0  row no-gutters"
  >
    <div
      className="col-auto"
    >
      <div
        className="jsx-1246332424 action-row-img"
      >
        <svg
          viewBox="0 0 18 18"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="m11.26 9-.34-.45a4.5 4.5 0 1 0-3.84 0L6.74 9A7 7 0 0 0 0 16v2h18v-2a7 7 0 0 0-6.74-7z"
            fill="#0071ce"
          />
        </svg>
      </div>
    </div>
    <div
      className="action-row-details col"
    >
      <div
        className="action-row-message row no-gutters"
      >
        <div
          className="col-md-8 col-7"
        >
          <div
            className="row no-gutters"
          >
            <div
              className="action-row-title col"
            >
              New account created: 
              <span
                onClick={[Function]}
              >
                <a
                  className="jsx-3150401870 account-link"
                  href="/accounts/receiver.test"
                  onClick={[Function]}
                  onMouseEnter={[Function]}
                >
                  receiver.test
                </a>
              </span>
            </div>
          </div>
          <div
            className="row no-gutters"
          >
            <div
              className="action-row-text col"
            >
              by
               
              <span
                onClick={[Function]}
              >
                <a
                  className="jsx-3150401870 account-link"
                  href="/accounts/signer.test"
                  onClick={[Function]}
                  onMouseEnter={[Function]}
                >
                  signer.test
                </a>
              </span>
            </div>
          </div>
        </div>
        <div
          className="ml-auto text-right col-md-4 col-5"
        >
          <div
            className="row"
          >
            <div
              className="action-row-txid col"
            >
              <span
                onClick={[Function]}
              >
                <a
                  className="transaction-link"
                  href="/transactions/BvJeW6gnFjkCBKCsRNEBrRLDQCFZNxLAi6uXzmLaVrrj"
                  onClick={[Function]}
                  onMouseEnter={[Function]}
                >
                  BvJeW6g...
                </a>
              </span>
            </div>
          </div>
          <div
            className="row"
          >
            <div
              className="action-row-timer col"
            >
              <span
                className="jsx-1246332424 action-row-timer-status"
              >
                Fetching Status...
                /Checking Finality...
              </span>
               
              <span>
                1s ago
              </span>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>,
  <div
    className="action-sparse-row mx-0  row no-gutters"
  >
    <div
      className="col-auto"
    >
      <div
        className="jsx-1246332424 action-row-img"
      >
        <svg
          viewBox="0 0 18 18"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M18 18v-3.6L8.92 5.32A4.5 4.5 0 1 0 4.5 9a4.47 4.47 0 0 0 .82-.08L14.4 18zM3 4.5A1.5 1.5 0 1 1 4.5 6 1.5 1.5 0 0 1 3 4.5z"
            fill="#5ace84"
          />
        </svg>
      </div>
    </div>
    <div
      className="action-row-details col"
    >
      <div
        className="action-row-message row no-gutters"
      >
        <div
          className="col-md-8 col-7"
        >
          <div
            className="row no-gutters"
          >
            <div
              className="action-row-title col"
            >
              New key added for 
              <span
                onClick={[Function]}
              >
                <a
                  className="jsx-3150401870 account-link"
                  href="/accounts/receiver.test"
                  onClick={[Function]}
                  onMouseEnter={[Function]}
                >
                  receiver.test
                </a>
              </span>
              : ed25519:8LXEySy...
              <p>
                with permission FullAccess and nonce 0
              </p>
            </div>
          </div>
          <div
            className="row no-gutters"
          >
            <div
              className="action-row-text col"
            >
              by
               
              <span
                onClick={[Function]}
              >
                <a
                  className="jsx-3150401870 account-link"
                  href="/accounts/signer.test"
                  onClick={[Function]}
                  onMouseEnter={[Function]}
                >
                  signer.test
                </a>
              </span>
            </div>
          </div>
        </div>
        <div
          className="ml-auto text-right col-md-4 col-5"
        >
          <div
            className="row"
          >
            <div
              className="action-row-txid col"
            >
              <span
                onClick={[Function]}
              >
                <a
                  className="transaction-link"
                  href="/transactions/BvJeW6gnFjkCBKCsRNEBrRLDQCFZNxLAi6uXzmLaVrrj"
                  onClick={[Function]}
                  onMouseEnter={[Function]}
                >
                  BvJeW6g...
                </a>
              </span>
            </div>
          </div>
          <div
            className="row"
          >
            <div
              className="action-row-timer col"
            >
              <span
                className="jsx-1246332424 action-row-timer-status"
              >
                Fetching Status...
                /Checking Finality...
              </span>
               
              <span>
                1s ago
              </span>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>,
]
`;
